--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     build: .
     container_name: backend
     ports:
-      - "5001:5000"
+      - "5000:5000"
     volumes:
-      - ./meu_projeto:/app
-    working_dir: /app
+      - ./meu_projeto:/app/meu_projeto
+    working_dir: /app/meu_projeto
     networks:
       - webapp_network
     depends_on:
