--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,19 +13,20 @@ services:
     networks:
       - webapp_network
 
-  # Back-end
+    # Back-end
   backend:
     build: .
     container_name: backend
     ports:
-      - "5000:5000"
+      - "5001:5001"
     volumes:
-      - ./meu_projeto:/app/meu_projeto
+      - ./meu_projeto:/app
     working_dir: /app/meu_projeto
     networks:
       - webapp_network
     depends_on:
       - database
+
 
   # Database (MySQL)
   database:
